# University

./: .gitignore  README.md
ACM-ICPC/Bile/: Bile.pro  main.cpp
ACM-ICPC/Calatorie/: Calatorie.pro  Makefile  Makefile.Debug  Makefile.Release  calatorie.in  calatorie.out  main.cpp
ACM-ICPC/Catun/: Catun.pro  Makefile  Makefile.Debug  Makefile.Release  catun.in  catun.out  main.cpp
ACM-ICPC/Datorii/: Datorii.pro  Makefile  Makefile.Debug  Makefile.Release  datorii.in  datorii.out  main.cpp
ACM-ICPC/DivMul/: DivMul.pro  Makefile  Makefile.Debug  Makefile.Release  divmul.in  main.cpp
ACM-ICPC/KMP/: kmp.cpp  strmatch.in
ACM-ICPC/KMP_new/: KMP_new.pro  Makefile  Makefile.Debug  Makefile.Release  main.cpp  strmatch.in  strmatch.out
ACM-ICPC/Knapsack/: Knapsack.pro  (+5 more)
Algorithmic-Problems/: alo.cpp  arme.cpp  bancomat.cpp  barca.cpp  bete1.cpp  bete12.cpp  bomboane.cpp  bule.cpp  cabina.cpp  chibrituri.cpp  cifra.cpp  cifra1.cpp  cifre2.cpp  cifre3.cpp  cluburi.cpp  cmmdc.cpp  codcorect.cpp  comori.cpp  concurs3.cpp  cuburi.cpp  cuburi3.cpp  desen2.cpp  diferit.cpp  fazanr.cpp  fib.cpp  gardul.cpp  ingerasi.cpp  jeton.c  jeton.cpp  ma.cpp  magic6.cpp  matrixdel.cpp  numar2.cpp  numere6.cpp  numerus.cpp  pal.cpp  perfecte.cpp  pin.cpp  pinochio.cpp  porumb.cpp  (+19 more)
BachelorExamPrep/OOP/Execices/: CMakeLists.txt  ex1.cpp  ex1.h  ex2.cpp  ex2.h  ex3.cpp  ex3.h  ex4.cpp  ex4.h  ex5.cpp  ex5.h  ex6.cpp  ex6.h  insertionSort.cpp  insertionSort.h  main.cpp  mergesort.cpp  mergesort.h  quickSort.cpp  quickSort.h  selectionSort.cpp  selectionSort.h  subiect2013.cpp  subiect2013.h  subiect2014.cpp  subiect2014.h  subiect2016Sept.cpp  subiect2016Sept.h  subiect2017.cpp  subiect2017.h  subiect2017Sept.cpp  subiect2017Sept.h  subiect2018.cpp  subiect2018.h  subiect2018Iulie.cpp  subiect2018Iulie.h  subiect2018Sept.cpp  subiect2018Sept.h
Connect4_alpha_beta_search/: conftest.py  dps.txt  main.py
Semester2/Object Oriented Programming C++/Labs/lab2-4/: CMakeLists.txt  main.c
Semester2/Object Oriented Programming C++/Labs/lab2-4/domain/: Transaction.c  Transaction.h
Semester2/Object Oriented Programming C++/Labs/lab2-4/repository/: Repository.c  Repository.h
Semester2/Object Oriented Programming C++/Labs/lab2-4/service/: Service.c  Service.h
Semester2/Object Oriented Programming C++/Labs/lab2-4/ui/: UserInterface.c  UserInterface.h
Semester2/Object Oriented Programming C++/Labs/lab2-4/utils/: DynamicVector.c  DynamicVector.h  UserInterfaceVal.c  UserInterfaceVal.h  undo.c  undo.h
Semester2/Object Oriented Programming C++/Labs/lab6-7/: CMakeLists.txt  CodeCoverage.cmake  file_cvs.cvs  file_html.html  main.cpp
Semester2/Object Oriented Programming C++/Labs/lab6-7/domain/: cart.cpp  cart.h  export.cpp  movie.cpp  movie.h  undo.h  validator.cpp  validator.h
Semester2/Object Oriented Programming C++/Labs/lab6-7/repositroy/: repository.cpp  repository.h
Semester2/Object Oriented Programming C++/Labs/lab6-7/service/: service.cpp  service.h
Semester2/Object Oriented Programming C++/Labs/lab6-7/ui/: user_interface.cpp  user_interface.h
Semester2/Object Oriented Programming C++/Labs/lab6-7/utils/: helper.cpp  helper.h  test_repo.txt  tests.cpp  tests.h  text_html.html
Semester5/PPD/LoG-Cuda/: CMakeLists.txt  LaplaceFilter.cu  run.sh  tree.yuv  yourjpeg.yuv
Semester5/PPD/MulPolyMPI/: 5  CMakeLists.txt  main  main.cpp
Semester5/PPD/polynomial_multiplication/: CMakeLists.txt  NumberDiff.cpp  NumberDiff.h  PolyMul.cpp  PolyMul.h  Polynomial.cpp  Polynomial.h  Utils.cpp  Utils.h  main.cpp
(+3565 files in other folders)
