cmake_minimum_required(VERSION 3.16)
project(Execices)

set(CMAKE_CXX_STANDARD 14)

add_executable(Execices main.cpp ex1.cpp ex1.h ex2.cpp ex2.h ex3.cpp ex3.h ex4.cpp ex4.h ex5.cpp ex5.h ex6.cpp ex6.h selectionSort.cpp selectionSort.h mergesort.cpp mergesort.h quickSort.cpp quickSort.h insertionSort.cpp insertionSort.h subiect2013.cpp subiect2013.h subiect2014.cpp subiect2014.h subiect2018.cpp subiect2018.h subiect2017.cpp subiect2017.h subiect2017Sept.cpp subiect2017Sept.h subiect2018Sept.cpp subiect2018Sept.h subiect2018Iulie.cpp subiect2018Iulie.h subiect2016Sept.cpp subiect2016Sept.h)